<resources>
    <string name="app_name">SingIT</string>
    <string name="welcome">Welcome to Sing It!</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo">logo</string>
    <string name="singup">Sing up</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="submit">submit</string>
    <string name="appbar_title">Library</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search for song</string>
    <string name="account_profile">Account Profile Settings</string>
    <string name="content_description_settings">Settings</string>
    <string name="addsong">AddSong</string>
    <string name="song_name">Song name</string>
    <string name="upload_song_from_phone">Upload song from phone</string>
    <string name="search_for_a_song_on_youtube">Search for a song on YouTube</string>
    <string name="go_back_to_library">Go back to library</string>
    <string name="logout">Logout</string>
    <string name="lyrics">lyrics</string>
    <string name="playButton">playButton</string>
    <string name="skipPreviousButton">skipPreviousButton</string>
    <string name="skipNextButton">skipNextButton</string>
    <string name="playSkipButton">play skip button</string>
</resources>